--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -3,43 +3,82 @@
 @tailwind utilities;
 
 
-:root,
-:host {
-    --md-sys-color-background: rgb( 246 251 243);
-    --md-sys-color-on-background: rgb( 23 29 25);
-    --md-sys-color-surface: rgb( 245 251 243);
-    --md-sys-color-surface-dim: rgb( 213 220 212);
-    --md-sys-color-surface-bright: rgb( 245 251 243);
-    --md-sys-color-surface-container-lowest: rgb( 255 255 255);
-    --md-sys-color-surface-container-low: rgb( 239 245 238);
-    --md-sys-color-surface-container: rgb( 233 240 232);
-    --md-sys-color-surface-container-high: rgb( 228 234 226);
-    --md-sys-color-surface-container-highest: rgb( 222 228 221);
-    --md-sys-color-on-surface: rgb( 23 29 25);
-    --md-sys-color-surface-variant: rgb( 217 230 218);
-    --md-sys-color-on-surface-variant: rgb( 62 74 65);
-    --md-sys-color-inverse-surface: rgb( 44 50 45);
-    --md-sys-color-inverse-on-surface: rgb( 236 242 235);
-    --md-sys-color-outline: rgb( 110 122 112);
-    --md-sys-color-outline-variant: rgb( 189 202 190);
-    --md-sys-color-shadow: rgb( 0 0 0);
-    --md-sys-color-scrim: rgb( 0 0 0);
-    --md-sys-color-surface-tint: rgb( 0 109 66);
-    --md-sys-color-primary: rgb( 0 92 56);
-    --md-sys-color-on-primary: rgb( 255 255 255);
-    --md-sys-color-primary-container: rgb( 0 134 83);
-    --md-sys-color-on-primary-container: rgb( 255 255 255);
-    --md-sys-color-inverse-primary: rgb( 105 220 157);
-    --md-sys-color-secondary: rgb( 62 103 78);
-    --md-sys-color-on-secondary: rgb( 255 255 255);
-    --md-sys-color-secondary-container: rgb( 194 239 208);
-    --md-sys-color-on-secondary-container: rgb( 41 81 58);
-    --md-sys-color-tertiary: rgb( 51 72 165);
-    --md-sys-color-on-tertiary: rgb( 255 255 255);
-    --md-sys-color-tertiary-container: rgb( 90 110 204);
-    --md-sys-color-on-tertiary-container: rgb( 255 255 255);
-    --md-sys-color-error: rgb( 186 26 26);
-    --md-sys-color-on-error: rgb( 255 255 255);
-    --md-sys-color-error-container: rgb( 255 218 214);
-    --md-sys-color-on-error-container: rgb( 65 0 2);
+:root {
+  --md-sys-color-background: rgb(247 251 234);
+  --md-sys-color-on-background: rgb(25 29 19);
+  --md-sys-color-surface: rgb(247 251 234);
+  --md-sys-color-surface-dim: rgb(216 220 204);
+  --md-sys-color-surface-bright: rgb(247 251 234);
+  --md-sys-color-surface-container-lowest: rgb(255 255 255);
+  --md-sys-color-surface-container-low: rgb(242 245 229);
+  --md-sys-color-surface-container: rgb(236 240 223);
+  --md-sys-color-surface-container-high: rgb(230 234 218);
+  --md-sys-color-surface-container-highest: rgb(224 228 212);
+  --md-sys-color-on-surface: rgb(25 29 19);
+  --md-sys-color-surface-variant: rgb(222 230 205);
+  --md-sys-color-on-surface-variant: rgb(66 73 55);
+  --md-sys-color-inverse-surface: rgb(46 50 39);
+  --md-sys-color-inverse-on-surface: rgb(239 243 226);
+  --md-sys-color-outline: rgb(114 122 102);
+  --md-sys-color-outline-variant: rgb(194 202 178);
+  --md-sys-color-shadow: rgb(0 0 0);
+  --md-sys-color-scrim: rgb(0 0 0);
+  --md-sys-color-surface-tint: rgb(63 105 0);
+  --md-sys-color-primary: rgb(63 105 0);
+  --md-sys-color-on-primary: rgb(255 255 255);
+  --md-sys-color-primary-container: rgb(111 174 25);
+  --md-sys-color-on-primary-container: rgb(7 18 0);
+  --md-sys-color-inverse-primary: rgb(151 217 69);
+  --md-sys-color-secondary: rgb(75 102 42);
+  --md-sys-color-on-secondary: rgb(255 255 255);
+  --md-sys-color-secondary-container: rgb(208 242 165);
+  --md-sys-color-on-secondary-container: rgb(56 82 23);
+  --md-sys-color-tertiary: rgb(0 108 80);
+  --md-sys-color-on-tertiary: rgb(255 255 255);
+  --md-sys-color-tertiary-container: rgb(36 176 135);
+  --md-sys-color-on-tertiary-container: rgb(0 17 10);
+  --md-sys-color-error: rgb(186 26 26);
+  --md-sys-color-on-error: rgb(255 255 255);
+  --md-sys-color-error-container: rgb(255 218 214);
+  --md-sys-color-on-error-container: rgb(65 0 2);
+}
+
+[data-theme='dark'] {
+  --md-sys-color-background:rgb( 17 21 11);
+  --md-sys-color-on-background:rgb( 224 228 212);
+  --md-sys-color-surface:rgb( 17 21 11);
+  --md-sys-color-surface-dim:rgb( 17 21 11);
+  --md-sys-color-surface-bright:rgb( 54 59 47);
+  --md-sys-color-surface-container-lowest:rgb( 11 15 7);
+  --md-sys-color-surface-container-low:rgb( 25 29 19);
+  --md-sys-color-surface-container:rgb( 29 33 23);
+  --md-sys-color-surface-container-high:rgb( 39 43 33);
+  --md-sys-color-surface-container-highest:rgb( 50 54 43);
+  --md-sys-color-on-surface:rgb( 224 228 212);
+  --md-sys-color-surface-variant:rgb( 66 73 55);
+  --md-sys-color-on-surface-variant:rgb( 194 202 178);
+  --md-sys-color-inverse-surface:rgb( 224 228 212);
+  --md-sys-color-inverse-on-surface:rgb( 46 50 39);
+  --md-sys-color-outline:rgb( 140 148 126);
+  --md-sys-color-outline-variant:rgb( 66 73 55);
+  --md-sys-color-shadow:rgb( 0 0 0);
+  --md-sys-color-scrim:rgb( 0 0 0);
+  --md-sys-color-surface-tint:rgb( 151 217 69);
+  --md-sys-color-primary:rgb( 151 217 69);
+  --md-sys-color-on-primary:rgb( 31 55 0);
+  --md-sys-color-primary-container:rgb( 79 130 0);
+  --md-sys-color-on-primary-container:rgb( 255 255 255);
+  --md-sys-color-inverse-primary:rgb( 63 105 0);
+  --md-sys-color-secondary:rgb( 177 209 136);
+  --md-sys-color-on-secondary:rgb( 31 55 0);
+  --md-sys-color-secondary-container:rgb( 44 70 12);
+  --md-sys-color-on-secondary-container:rgb( 189 222 148);
+  --md-sys-color-tertiary:rgb( 93 220 176);
+  --md-sys-color-on-tertiary:rgb( 0 56 40);
+  --md-sys-color-tertiary-container:rgb( 0 133 100);
+  --md-sys-color-on-tertiary-container:rgb( 255 255 255);
+  --md-sys-color-error:rgb( 255 180 171);
+  --md-sys-color-on-error:rgb( 105 0 5);
+  --md-sys-color-error-container:rgb( 147 0 10);
+  --md-sys-color-on-error-container:rgb( 255 218 214);
 }
